Include the system headers first to avoid name conflict between Cygwin headers and a Ghostscript macro. This works because (1) we don't use the affected structure, (2) system header files are protected from double inclusion. Bug 689276.

DIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8094 a1074d23-0009-0410-80fe-cf8c14f379e6