gs/src/zimage.c
@@ -15,6 +15,7 @@
 /* Image operators */
 #include "math_.h"
 #include "memory_.h"
+#include "stat_.h" /* get system header early to avoid name clash on Cygwin */
 #include "ghost.h"
 #include "oper.h"
 #include "gscolor.h"
